src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html, body, #root, .App {
  background-color: #333333;
  display: flex;
  flex-direction: column;
  overflow-x: hidden;
}

body {
  font-family: 'Courier New', Courier, monospace;
  font-weight: 100;
  font-size: 36px;
  color: white;
  margin: 0 auto;
  overflow-y: hidden;
}

.header {
  height: 32rem;
  background-image: url(img/Maple\ Hero.jpg);
  background-size: cover;
  background-position: top;
}

.nav {
  height: 0.14;
  min-height: 60px;
  background-color: #333333;
  opacity: 0.66;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logo {
  margin-left: 1rem;
  display: flex;
  align-items: center;
  font-weight: bold;
}

.user-nav {
  align-self: stretch;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-right: 1rem;
  font-size: 24px;
}

.user-nav__link {
  padding: 0 1rem;
  cursor: pointer;
  display: flex;
  align-items: center;
  height: 100%;
}

.user-nav__link:hover {
  background-color: rgb(26, 26, 26);
}

.menu-btn {
  position: relative;
  display: none;
  justify-content: center;
  align-items: center;
  width: 40px;
  height: 40px;
  cursor: pointer;
  transition: all .5s ease-in-out;
  margin-right: 1rem;
}

.menu-btn__burger {
  width: 30px;
  height: 3px;
  background: #fff;
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(255, 101, 47, .2);
  transition: all .5s ease-in-out;
}

.menu-btn__burger::before,
.menu-btn__burger::after {
  content: '';
  position: absolute;
  width: 30px;
  height: 3px;
  background: #fff;
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(255, 101, 47, .2);
  transition: all .5s ease-in-out;
}

.menu-btn__burger::before {
  transform: translateY(-8px);
}

.menu-btn__burger::after {
  transform: translateY(8px);
}

.menu-btn.open .menu-btn__burger {
  transform: translateX(-50px);
  background: transparent;
  box-shadow: none;
}

.menu-btn.open .menu-btn__burger::before {
  transform: rotate(45deg) translate(35px, -35px);
}

.menu-btn.open .menu-btn__burger::after {
  transform: rotate(-45deg) translate(35px, 35px);
}

.ham-nav {
  display: none;
}

.block-content {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

h1 {
  font-weight: 400 !important;
  font-size: 40px !important;
  color: white !important;
}

p {
  font-size: 30px !important;
  color: white !important;
}

.center-text {
  text-align: center;
}

hr {
  width: 100%;
  border: 0;
    height: 1px;
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.05));
}

.grid {
  display: grid;
  grid-template-rows: 1fr;
  grid-template-columns: repeat(2, 1fr);
  margin-left: 1rem;
  margin-right: 1rem;
  height: 100%;
}

.mb-1 {
  margin-bottom: 1rem;
}

.block-content-background {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  background: #c4c4c4;
  border-radius: 20px;
  height: 16rem;
  opacity: 0.90;
}

.nav-cards {
  background-color: #e9e9e9;
  height: 13rem;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.card-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  padding: 0 1rem;
}

.card-item-1 {
  background-image: url(img/Card\ Image\ 1.png);
  background-size: cover;
}

.card-item-2 {
  background-image: url(img/Card\ Image\ 2.png);
  background-size: cover;
}

.card-item-3 {
  background-image: url(img/Card\ Image\ 3.png);
  background-size: cover;
}

.card {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 10rem;
  width: 20rem;
  border-radius: 20px;
  box-shadow: 5px 5px 5px grey;
  cursor: pointer;
}

.footer {
  background-color: #333333;
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 0.5rem;
}

@media only screen and (max-width: 1100px) {
  body {
    font-weight: 400;
    font-size: 30px;
  }

  .user-nav {
    font-size: 24px;
  }

  .user-nav__link {
    padding: 0 1.5rem;
  }

  h1 {
    font-size: 36px !important;
  }
  
  p {
    font-size: 24px !important;
  }

  .card {
    width: 15rem;
  }
}

@media only screen and (max-width: 915px) {
  body {
    font-weight: 400;
    font-size: 24px;
  }

  h1 {
    font-size: 30px !important;
  }
  
  p {
    font-size: 18px !important;
  }

  .block-content-background {
    height: 12rem;
  }

  .user-nav {
    font-size: 16px;
  }

  .user-nav__link {
    padding: 0 1rem;
  }

  .block-content.h1 {
    font-size: 30px;
  }

  .block-content.p {
    font-size: 24px;
  }

  .card {
    width: 12rem;
  }
}

@media only screen and (max-width: 685px) {
  .block-content-background {
    height: 12rem;
  }

  .user-nav {
    display: none;
  }

  .user-nav__link {
    display: none;
  }

  .menu-btn {
    display: flex;
  }

  .ham-nav {
    position: absolute;
    top: 0px;
    right: -60px;
    width: 0px;
    float: right;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    flex-direction: column;
    opacity: 0.00;
    pointer-events: none;
    cursor: pointer;
    transition: all .5s ease-in-out;
    background-color: rgb(95, 95, 95);
    height: 90rem;
    padding-top: 100px;
    z-index:-1;
  }

  .ham-nav.open {
    width: 200px;
    transition: all .5s ease-in-out;
    opacity: 100.00;
    pointer-events: all;
    transform: translateX(-60px);
  }

  .ham-nav__link {
    transition: all .5s ease-in-out;
    margin-top: 15px;
    margin-bottom: 15px;
  }

  .ham-nav::before,
  .ham-nav::after {
    transition: all .5s ease-in-out;
  }

  .ham-nav.open .ham-nav__link {
    transition: all .5s ease-in-out;
  }

  .ham-nav.open .ham-nav__link::before {
    transition: all .5s ease-in-out;
  }

  .ham-nav.open .ham-nav__link::after {
    transition: all .5s ease-in-out;
  }

  .grid {
    margin-top: 10rem;
    grid-template-columns: 1fr;
  }

  .header {
    height: 20rem;
  }

  .block-content.h1 {
    font-size: 30px;
  }

  .block-content.p {
    font-size: 24px;
  }

  .card-container {
    flex-direction: column;
    margin-top: 14rem;
    height: 100%;
  }

  .nav-cards {
    height: auto;
  }

  .card {
    margin-bottom: 2rem;
    width: 100%;
    height: 16rem;
  }
}

@media only screen and (max-width: 535px) {
  .nav-cards h1 {
    font-size: 40px !important;
  }

  body {
    font-size: 18px;
  }

  .footer p {
    font-size: 12px !important;
  }

  .grid h1 {
    font-size: 24px !important;
  }

  .grid p {
    font-size: 18px !important;
  }
}

@media only screen and (max-width: 400px) {

  .ham-nav.open {
    transform: translateX(-50px);
  }

  .ham-nav__link {
    margin-top: 10px;
    margin-bottom: 10px;
  }
}

